--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #333;
+    background-color: #fcfcfc;
     color: #eee;
     font-family: Arial, sans-serif;
     display: flex;
