--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     position: relative;
     width: 800px;
     height: 400px;
-    border: 2px solid #ffffff00;
+    border: 2px solid #ffffff;
     background-color: #ffffff;
     overflow: hidden;
 }
