--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #fcfcfc;
-    color: #eee;
+    color: #000000;
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
@@ -15,7 +15,7 @@ body {
     position: relative;
     width: 800px;
     height: 400px;
-    border: 2px solid #ffffff;
+    border: 2px solid #000000;
     background-color: #ffffff;
     overflow: hidden;
 }
